// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`indexing indexes posts. 1`] = `
Object {
  "thread": Object {
    "$type": "app.bsky.feed.defs#threadViewPost",
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "labels": Array [],
        "viewer": Object {
          "blockedBy": false,
          "muted": false,
        },
      },
      "cid": "cids(0)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "likeCount": 0,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "facets": Array [
          Object {
            "features": Array [
              Object {
                "$type": "app.bsky.richtext.facet#mention",
                "did": "user(1)",
              },
            ],
            "index": Object {
              "byteEnd": 9,
              "byteStart": 0,
            },
          },
        ],
        "text": "@bob.test how are you?",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(0)",
      "viewer": Object {},
    },
    "replies": Array [],
  },
}
`;

exports[`indexing indexes posts. 2`] = `
Object {
  "createNotifications": Array [
    Object {
      "author": "user(1)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "reason": "mention",
      "reasonSubject": null,
      "recordCid": "cids(0)",
      "recordUri": "record(0)",
      "userDid": "user(0)",
    },
  ],
  "deleteNotifications": Array [],
}
`;

exports[`indexing indexes profiles. 1`] = `
Object {
  "did": "user(0)",
  "displayName": "dan",
  "followersCount": 0,
  "followsCount": 0,
  "handle": "dan.test",
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "labels": Array [],
  "postsCount": 0,
  "viewer": Object {
    "blockedBy": false,
    "muted": false,
  },
}
`;

exports[`indexing indexes profiles. 2`] = `
Object {
  "did": "user(0)",
  "displayName": "danny",
  "followersCount": 0,
  "followsCount": 0,
  "handle": "dan.test",
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "labels": Array [],
  "postsCount": 0,
  "viewer": Object {
    "blockedBy": false,
    "muted": false,
  },
}
`;

exports[`indexing indexes profiles. 3`] = `
Object {
  "did": "user(0)",
  "followersCount": 0,
  "followsCount": 0,
  "handle": "dan.test",
  "labels": Array [],
  "postsCount": 0,
  "viewer": Object {
    "blockedBy": false,
    "muted": false,
  },
}
`;

exports[`indexing indexes profiles. 4`] = `
Object {
  "createNotifications": Array [],
  "deleteNotifications": Array [],
  "updateNotifications": Array [],
}
`;
